<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.braintech.cmyco.activity.RegistrationActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up_bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.braintech.cmyco.activity.RegistrationActivity"
        tools:showIn="@layout/activity_registration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">



            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/bg_edittext"
                android:hint="@string/logo_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="@dimen/txt_normal_size"

                />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/bg_edittext"
                android:hint="@string/logo_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="@dimen/txt_normal_size"

                />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/bg_edittext"
                android:hint="@string/logo_login_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="@dimen/txt_normal_size"

                />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/bg_edittext"
                android:hint="@string/logo_login_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="@dimen/txt_normal_size"

                />


            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/button_selector"
                android:text="@string/btn_sign_up"
                android:textColor="@color/white" />


        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
